src/test/deca/syntax/invalid/avecObject/18_literaux.deca
// Description:
//
// Resultats:
//
// Historique:
//    cree le 01/01/2023
// Un exemple de programme Deca
{
    a=null;
}
